crates/shell/src/shells/snapshots/starbase_shell__shells__powershell__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/powershell.rs
expression: "PowerShell.format_hook(Hook::Activate\n{\n    command: \"starbase hook powershell\".into(), function:\n    \"_starbase_hook\".into(),\n}).unwrap()"
---
function _starbase_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = starbase hook powershell;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}
