crates/shell/src/shells/snapshots/starbase_shell__shells__powershell__tests__formats_cd_hook.snap
---
source: crates/shell/src/shells/powershell.rs
expression: PowerShell.format_hook(hook).unwrap()
---
function _starbase_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = starbase hook powershell;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

function _starbase_deactivate {
  $exports = starbase deactivate powershell;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }

  if (Get-Variable -Name '_starbase_hook_prompt' -Scope Global -ErrorAction Ignore) {
    Set-Item -Path 'function:global:prompt' -Value $global:_starbase_hook_prompt;
    Remove-Variable -Name '_starbase_hook_prompt' -Scope Global;
  }

  Remove-Item -LiteralPath 'function:_starbase_hook' -ErrorAction Ignore;
  Remove-Item -LiteralPath 'function:_starbase_deactivate' -ErrorAction Ignore;
}

if (-not (Get-Variable -Name '_starbase_hook_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_prompt = $function:prompt;

  function global:prompt {
    _starbase_hook;
    & $global:_starbase_hook_prompt;
  }
};
