crates/shell/src/shells/snapshots/starbase_shell__shells__powershell__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/powershell.rs
expression: "PowerShell.format_hook(Hook::OnContextChange\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# Windows PowerShell has no change-dir trigger, since `LocationChangedAction`
# requires PowerShell 6+, so the global prompt is wrapped instead
if (-not (Get-Variable -Name '_starbase_hook_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_prompt = $function:prompt;

  function global:prompt {
    _starbase_hook;
    & $global:_starbase_hook_prompt;
  }
};
