crates/shell/src/shells/snapshots/starbase_shell__shells__powershell__tests__formats_unregister_handlers_hook.snap
---
source: crates/shell/src/shells/powershell.rs
expression: "PowerShell.format_hook(Hook::UnregisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
if (Get-Variable -Name '_starbase_hook_on_prompt' -Scope Global -ErrorAction Ignore) {
  Set-Item -Path 'function:global:prompt' -Value $global:_starbase_hook_on_prompt;
  Remove-Variable -Name '_starbase_hook_on_prompt' -Scope Global;
}
